change author name

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     },
     "authors": [
         {
-            "name": "Your Name"
+            "name": "Janis Feldmanis"
         }
     ],
     "minimum-stability": "stable",
